added soft delete and hard delete
