# src/routes/userRouter.js
@@ -7,6 +7,7 @@ router.post('/users', userController.createUser);
 router.get('/users', userController.getAllUsers);
 router.get('/users/:userId', userController.getUserById);
 router.put('/users/:userId', userController.updateUser);
-router.delete('/users/:userId', userController.deleteUser);
+router.delete('/users/:userId', userController.softDeleteUser);
+router.delete('/users/:userId/force', userController.forceDeleteUser);
 
 module.exports = router;
